# advent-of-code

./: Cargo.toml  readme.md
day01/src/: main.rs
day02/: Cargo.toml
day03/src/: main.rs
day03_other_solution/: Cargo.toml
day03_other_solution/src/: main.rs
rust/2022/day_01/src/: main.rs
rust/2022/day_02/: Cargo.toml
src/: main.rs
