[package]
name = "day_02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inline_colorization = "0.1.5"
lazy_static = "1.4.0"
phf = { version = "0.11.2", features = ["macros"] }
strum = { version = "0.25.0",  features = ["derive"] }
